@@ -98,6 +98,7 @@ In case you have already checked out a User Plugin in you `~/.ccw/` folder, your
 
 === Miscellaneous Enhancements
 - Print maven coordinates of Counterclockwise dependencies at plugin startup in `.metadata/.log`. Fixes #741
+- Launching REPLs from launch configurations now correctly opens up a `REPL View` if the process outputs an nrepl URL in the stdout Console
 
 === Counterclockwise embedded nREPL
 Counterclockwise ships with an embedded nREPL server. The following enhancements have been applied:
